kubernetes/services/legacy-redirects/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: legacy-redirects
  annotations:
    hub.radunenu.com/description: Old domains that redirect to radunenu.com and Steam
