kubernetes/services/legacy-redirects/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: legacy-redirects
  namespace: legacy-redirects
spec:
  selector:
    app: legacy-redirects
  ports:
    - name: http
      port: 80
      targetPort: 8080
